# perpetual-ome

./: .gitignore  .specification.md.swp  Cargo.toml  Dockerfile  README.md  cert.yaml  deploy.yaml  ingress.yaml  specification.md  troubleshooting.md
.github/workflows/: main.yml  rust.yml
deployment/: deploy.md  deploy.yaml  ingress.yaml  service.yaml  setupRelease.sh
src/: api.rs  args.rs  book.rs  book_tests.rs  handler.rs  lib.rs  main.rs  order.rs  rpc.rs  state.rs  tests.rs  util.rs
tests/api/: _footer.sh  _header.sh  api_test_create_book.sh  api_test_index_book.sh  api_test_read_book.sh  run.sh
