[package]
name = "tracer-ome"
version = "0.1.0"
authors = ["Jack McPherson <jackmcpherson@mycelium.ventures>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = "0.9.2"
derive_more = "0.99.9"
chrono = { version = "0.4", features = ["serde"] }
sha3 = "0.9.1"
generic-array = "0.14.3"
byteorder = "1.3.4"
byte-slice-cast = "0.3.5"
thiserror = "1.0.20"
serde = { version = "1.0", features = ["derive", "rc"] }
clap = "2.33"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
warp = "0.3"
rlp = "0.4.5"
web3 = "0.13.0"
serde_json = "1.0.57"
ethabi = "12.0.0"
hex = "0.4.2"
queue = "0.3.2-final"
enum-display-derive = "0.1.0"
log = "0.4"
pretty_env_logger = "0.4"
reqwest = "0.11.0"
rustc-hex = "2.1.0"

