[package]
name = "tracer-ome"
version = "0.0.2"
authors = ["Jack McPherson <jackmcpherson@mycelium.ventures>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = "0.9.2"
derive_more = "0.99.9"
chrono = { version = "0.4", features = ["serde"] }
generic-array = "0.14.3"
byteorder = "1.3.4"
byte-slice-cast = "0.3.5"
thiserror = "1.0.20"
serde = { version = "1.0", features = ["derive", "rc"] }
clap = "2.33"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
warp = { version = "0.3.1", features = ["tls"] }
rlp = "0.4.5"
web3 = "0.13.0"
serde_json = "1.0.57"
ethabi = "12.0.0"
enum-display-derive = "0.1.0"
log = "0.4"
pretty_env_logger = "0.4"
reqwest = { version = "0.11.0", features = ["json"] }
rustc-hex = "2.1.0"
itertools = "0.10.0"
hex = "0.4.3"
